update marketplace link

--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,6 @@
   "DISPLAY_COST": 0.035,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/AlphaDraconis",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/alpha-draconis-dragonnft",
   "SHOW_BACKGROUND": true
 }
